--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,28 +6,22 @@
     app:startDestination="@id/overviewMoviesFragment">
 
     <fragment
-        android:id="@+id/FirstFragment"
-        android:name="com.example.jmdb.FirstFragment"
-        android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
-
-        <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/SecondFragment"
-        android:name="com.example.jmdb.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
-
-        <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
-    </fragment>
-    <fragment
         android:id="@+id/overviewMoviesFragment"
         android:name="com.example.jmdb.screens.overviewmovies.OverviewMoviesFragment"
         android:label="fragment_overview_movies"
-        tools:layout="@layout/fragment_overview_movies" />
+        tools:layout="@layout/fragment_overview_movies" >
+        <action
+            android:id="@+id/action_overviewMoviesFragment_to_detailsMovieFragment"
+            app:destination="@id/detailsMovieFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/overviewFavouritesFragment"
+        android:name="com.example.jmdb.screens.overviewfavourites.OverviewFavouritesFragment"
+        android:label="fragment_overview_favourites"
+        tools:layout="@layout/fragment_overview_favourites" />
+    <fragment
+        android:id="@+id/detailsMovieFragment"
+        android:name="com.example.jmdb.screens.detailsmovie.DetailsMovieFragment"
+        android:label="fragment_details_movie"
+        tools:layout="@layout/fragment_details_movie" />
 </navigation>
