--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -11,7 +11,7 @@
         android:label="fragment_overview_movies"
         tools:layout="@layout/fragment_overview_movies" >
         <action
-            android:id="@+id/action_overviewMoviesFragment_to_detailsMovieFragment"
+            android:id="@+id/action_showDetail"
             app:destination="@id/detailsMovieFragment" />
     </fragment>
     <fragment
@@ -23,5 +23,9 @@
         android:id="@+id/detailsMovieFragment"
         android:name="com.example.jmdb.screens.detailsmovie.DetailsMovieFragment"
         android:label="fragment_details_movie"
-        tools:layout="@layout/fragment_details_movie" />
+        tools:layout="@layout/fragment_details_movie">
+        <argument
+            android:name="selectedProperty"
+            app:argType="com.example.jmdb.network.Movie" />
+    </fragment>
 </navigation>
