--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/overviewMoviesFragment"
         android:name="com.example.jmdb.screens.overviewmovies.OverviewMoviesFragment"
-        android:label="fragment_overview_movies"
+        android:label="Movies overview"
         tools:layout="@layout/fragment_overview_movies" >
         <action
             android:id="@+id/action_showDetail"
@@ -22,7 +22,7 @@
     <fragment
         android:id="@+id/detailsMovieFragment"
         android:name="com.example.jmdb.screens.detailsmovie.DetailsMovieFragment"
-        android:label="fragment_details_movie"
+        android:label="Details"
         tools:layout="@layout/fragment_details_movie">
         <argument
             android:name="selectedProperty"
